<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/outline_home_black_24"
        app:showAsAction="always"
        android:title="@string/action_home">

    </item>


    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/outline_account_circle_black_24"
        app:showAsAction="always"
        android:title="@string/action_profile">

    </item>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/outline_help_black_24"
        app:showAsAction="always"
        android:title="@string/action_help">

    </item>

    <item

        android:id="@+id/action_about_us"
        android:icon="@drawable/outline_info_black_24"
        app:showAsAction="always"
        android:title="@string/action_about_us">

    </item>

</menu>