<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_help"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/image_view_help"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/my_toolbar_help"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description"
        android:src="@drawable/home">

    </ImageView>

    <TextView

        android:id="@+id/donate_help_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_help"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/donate_instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="bold">

    </TextView>

    <TextView

        android:id="@+id/first_donate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donate_help_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/first_donate_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/second_donate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_donate_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/second_donate_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/third_donate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_donate_text_view"
        android:fontFamily="sans-serif-black"
        android:scrollbars="vertical"
        android:text="@string/third_donate_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/fourth_donate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_donate_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/fourth_donate_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/fifth_donate_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fourth_donate_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/fifth_donate_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>


    <TextView

        android:id="@+id/request_help_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fifth_donate_text_view"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/request_instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="bold">

    </TextView>

    <TextView

        android:id="@+id/first_request_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_help_text_view"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/first_request_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/second_request_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_request_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/second_request_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/third_request_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_request_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/third_request_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>

    <TextView

        android:id="@+id/fourth_request_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/third_request_text_view"
        android:fontFamily="sans-serif-black"
        android:text="@string/fourth_request_instruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/red"
        android:textStyle="italic">

    </TextView>


</RelativeLayout>