<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpdatePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_update_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <ImageView
        android:id="@+id/image_view_update_password"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@id/new_password_edit_text"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description"
        android:src="@drawable/home">

    </ImageView>

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/password_edit_text"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textStyle="bold">

    </EditText>

    <Button
        android:id="@+id/update_password_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@color/red"
        android:onClick="onConfirmClick"
        android:text="@string/confirm_button"
        android:textColor="@color/white"
        android:textStyle="bold">

    </Button>


</RelativeLayout>